fix: 1.升级至jdk21 | 根据使用情况修复代码